Refactor index.html for SEO and language changes
Updated the HTML structure for better SEO and localization.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Site Web Professionnel HDA</title>
-    </head>
+    <title>HDA GLOBAL SARL | Construction TCE & Aménagement au Maroc</title>
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+    <meta
+      name="description"
+      content="HDA GLOBAL SARL est une entreprise de construction TCE, aménagement et services divers basée à Casablanca, Maroc."
+    />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Local -->
+    <meta name="keywords" content="HDA GLOBAL SARL, construction TCE Maroc, entreprise construction Casablanca, aménagement Maroc" />
+
+    <!-- Vite -->
+    <script type="module" src="/src/main.tsx"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
+
