Update HTML structure and language to English

--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
 
-    <title>HDA GLOBAL SARL | Construction TCE & Aménagement au Maroc</title>
+  <!DOCTYPE html>
+  <html lang="en">
+<head>
+  <meta charset="UTF-8" />
 
-    <meta
-      name="description"
-      content="HDA GLOBAL SARL est une entreprise de construction TCE, aménagement et services divers basée à Casablanca, Maroc."
-    />
+  <link rel="icon" type="image/png" href="./src/assets/logo.png" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HDA GLOBAL SARL | Construction TCE & Aménagement</title>
 
-    <!-- SEO Local -->
-    <meta name="keywords" content="HDA GLOBAL SARL, construction TCE Maroc, entreprise construction Casablanca, aménagement Maroc" />
+  <meta
+    name="description"
+    content="HDA GLOBAL SARL est une entreprise de construction TCE, aménagement et services divers basée à Casablanca, Maroc."
+  />
 
-    <!-- Vite -->
-    <script type="module" src="/src/main.tsx"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
+  
