Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html lang="en">
 <head>
   <meta charset="UTF-8" />
-
+  <meta name="google-site-verification" content="5O3GBPz3-6zZMF_ZQM6aGaJvQSaBxrBHQ6cDmkdiEYQ" />
   <link rel="icon" type="image/png" href="./src/assets/logo.png" />
 
   <title>HDA GLOBAL SARL | Construction TCE & Aménagement</title>
