--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+  <!DOCTYPE html>
+  <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="google-site-verification" content="5O3GBPz3-6zZMF_ZQM6aGaJvQSaBxrBHQ6cDmkdiEYQ" />
@@ -12,3 +15,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
