--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="./src/assets/logo.png" />
 
     <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
