--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
 
-    <meta name="google-site-verification" content="5O3GBPz3-6zZMF_ZQM6aGaJvQSaBxrBHQ6cDmkdiEYQ" />
+  <meta name="google-site-verification" content="5O3GBPz3-6zZMF_ZQM6aGaJvQSaBxrBHQ6cDmkdiEYQ" />
 
-    <title>HDA GLOBAL SARL | Construction TCE & Aménagement</title>
+  <title>HDA GLOBAL SARL | Construction TCE & Aménagement</title>
 
-    <meta
-      name="description"
-      content="HDA GLOBAL SARL est une entreprise de construction TCE, aménagement et services divers basée à Casablanca, Maroc."
-    />
+  <meta
+    name="description"
+    content="HDA GLOBAL SARL est une entreprise de construction TCE, aménagement et services divers basée à Casablanca, Maroc."
+  />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="./src/assets/logo.png" />
+  <link rel="icon" type="image/png" href="/logo.png" />
 
-    <!-- Responsive -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
   <body>
     <div id="root"></div>
