--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     name="description"
     content="HDA GLOBAL SARL est une entreprise de construction TCE, aménagement et services divers basée à Casablanca, Maroc."
   />
-
+<meta property="og:title" content="HDA GLOBAL SARL | Construction TCE & Aménagement" />
+<meta property="og:description" content="Entreprise de construction TCE, aménagement et services divers à Casablanca, Maroc." />
+<meta property="og:image" content="/logo.png" />
+<meta property="og:url" content="https://hdaglobal.netlify.app" />
+<meta property="og:type" content="website" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="HDA GLOBAL SARL | Construction TCE & Aménagement" />
+<meta name="twitter:description" content="Entreprise de construction TCE, aménagement et services divers à Casablanca, Maroc." />
+<meta name="twitter:image" content="/logo.png" />
+<link rel="icon" type="image/png" href="./src/assets/logo.png" />
   <link rel="icon" type="image/png" href="/logo.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
