--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="HDA GLOBAL SARL | Construction TCE & Aménagement" />
 <meta name="twitter:description" content="Entreprise de construction TCE, aménagement et services divers à Casablanca, Maroc." />
-<meta name="twitter:image" content="/logo.png" />
-<link rel="icon" type="image/png" href="./src/assets/logo.png" />
-  <link rel="icon" type="image/png" href="/logo.png" />
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="/logo.png" />
+
+<!-- Google / Réseaux -->
+<meta property="og:image" content="https://hdaglobal.netlify.app/logo.png" />
+<meta name="twitter:image" content="https://hdaglobal.netlify.app/logo.png" />
+
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
